logout fixed to be aligned to the right always

--- a/trunk/Sprinkipaivat/WebContent/css/styles.css
+++ b/trunk/Sprinkipaivat/WebContent/css/styles.css
@@ -419,4 +419,7 @@ p { clear: both; }
 	top: 220px;
 	left: 10px;
 }
+#logout {
+	float:right;
+}
 
